# Progetto_PACS

./: .gitignore  CMakeLists.txt  README.md  main.cpp
build2/: CMakeCache.txt  Makefile  cmake_install.cmake
input/: parameters.txt
output/: grafico_mesh  test.txt
src/basis/: Basis.cpp  Basis.h  GradientHierarchicalBasis.cpp  GradientHierarchicalBasis.h  GradientLagrangeBasis.cpp  GradientLagrangeBasis.h  HierarchicalBasis.cpp  HierarchicalBasis.h  LagrangeBasis.cpp  LagrangeBasis.h
src/domain/: Edge.cpp  Edge.h  FeSpace.cpp  FeSpace.h  FeSpaceElement.cpp  FeSpaceElement.h  Node.cpp  Node.h  QuadElement.cpp  QuadElement.h  QuadMesh.cpp  QuadMesh.h
src/operators/: AdvectionOperator.cpp  AdvectionOperator.h  AdvectionOperatorNEW.cpp  AdvectionOperatorNEW.h  DiffusionOperator.cpp  DiffusionOperator.h  EdgeOperator.h  IntegralMatrix1D.h  IntegralMatrix1D_Burger.cpp  InteriorPenalityOperator.cpp  InteriorPenalityOperator.h  InteriorPenalityOperatorOld.cpp  InteriorPenalityOperatorOld.h  InteriorPenalitySymmetric.cpp  InteriorPenalitySymmetric.h  Operator.cpp  Operator.h  ReactionOperator.cpp  ReactionOperator.h  RightHandSideFunction.cpp  RightHandSideFunction.h  StabilizerOperator.cpp  StabilizerOperator.h  TransportEdgeOperator.cpp  TransportEdgeOperator.h
src/problems/: AdvectionDiffusionProblem.cpp  AdvectionDiffusionProblem.h  LaplaceProblem.cpp  LaplaceProblem.h  SystemMatrix.cpp  SystemMatrix.h
src/utilities/: Error.cpp  Error.h  FunctionProjection.cpp  FunctionProjection.h  GaussLobattoQuadrature.cpp  GaussLobattoQuadrature.h  MatrixOperations.cpp  MatrixOperations.h  SolutionEvaluation.cpp  SolutionEvaluation.h
tests/: CMakeLists.txt
tests/basis_tests/: BasisTest.cpp  CMakeLists.txt
tests/example_tests/: CMakeLists.txt  ClassName.h  SimpleTest.cpp
tests/function_projection_tests/: CMakeLists.txt  FunctionProjectionTest.cpp
tests/lib/googletest-master/: .travis.yml
tests/lib/googletest-master/googlemock/docs/: CheatSheet.md
tests/lib/googletest-master/googlemock/msvc/2005/: gmock.sln
tests/lib/googletest-master/googlemock/msvc/2010/: gmock.sln  gmock.vcxproj  gmock_config.props  gmock_main.vcxproj  gmock_test.vcxproj
tests/lib/googletest-master/googlemock/msvc/2015/: gmock.sln  gmock.vcxproj  gmock_main.vcxproj  gmock_test.vcxproj
tests/lib/googletest-master/googletest/: README.md
tests/lib/googletest-master/googletest/codegear/: gtest.cbproj  gtest.groupproj  gtest_main.cbproj  gtest_unittest.cbproj
tests/lib/googletest-master/googletest/msvc/2010/: gtest-md.vcxproj  gtest.vcxproj  gtest.vcxproj.filters  gtest_main-md.vcxproj  gtest_main.vcxproj  gtest_main.vcxproj.filters  gtest_prod_test-md.vcxproj  gtest_prod_test.vcxproj  gtest_prod_test.vcxproj.filters  gtest_unittest-md.vcxproj  gtest_unittest.vcxproj  gtest_unittest.vcxproj.filters
tests/mesh_tests/: CMakeLists.txt  MeshTest.cpp
tests/quadrature_tests/: CMakeLists.txt  QuadratureTest.cpp
tests/system_matrix_tests/: CMakeLists.txt  SystemMatrixTest.cpp
